2007-05-28 Peter Brett <peter@peter-b.co.uk>

	* include/prototype.h, src/g_rc.c, src/g_register.c, src/s_clib.c:
	  Add component sources based on Scheme procedures.

	  Add the ability to use a set of Scheme procedures which list and
	  return component symbols as the backend of a component library.
	  Adds the g_rc_component_library_funcs() and s_clib_add_scm()
	  functions to libgeda, as well as the component-library-funcs rc
	  file function.
	
	* include/prototype.h, src/s_clib.c: Change way that component
	  source conflicts are checked.

	  Allow the same component source to be added more than once, but
	  only if it has a unique name.  Also adds
	  s_clib_get_source_by_name().
	
	* src/s_clib.c: Sort lists of component sources and symbols.

	  Adds functions to compare sources and symbols by name
	  case-insensitively, and makes the both
	  s_clib_source_get_symbols() and s_clib_get_sources() return
	  lists sorted by name.
	
	* include/prototype.h, src/g_rc.c, src/g_register.c: Add & update
	  Scheme callbacks for new component library.
	
	  Add the (component-library-command) function, and make
	  (component-library) take an optional second argument for the
	  directory's source name.
	
	* include/prototype.h, src/g_rc.c, src/s_clib.c: Provide better
	  names for component sources.

	  Full pathnames aren't very user-friendly in the component
	  browser, and sometimes the name you want for your component
	  source isn't the same as the directory name. This patch provides
	  an infrastructure for better source naming, while falling back
	  to the "classic" behaviour if necessary.

	* include/prototype.h, include/struct.h, src/a_basic.c,
	  src/o_complex_basic.c, src/o_embed.c, src/o_list.c,
	  src/s_basic.c, src/s_clib.c, src/s_hierarchy.c,
	  src/s_toplevel.c: Implement new component library system in
	  libgeda.

	  A new component library model is needed to allow gschem etc.  to
	  work well with part database systems.  This patch provides the